# 18_concorrencia

./: .gitignore  README.md  app.py  pyproject.toml
db/: chroma.sqlite3
src/vidmarconcorrencia/: crew.py  main.py
src/vidmarconcorrencia/config/: agents.yaml  tasks.yaml
