[project]
name = "vidmarconcorrencia"
version = "0.1.0"
description = "vidmarconcorrencia using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.13.4",
    "crewai[tools]>=0.76.9,<1.0.0",
    "pydantic>=2.9.2",
    "python-docx>=1.1.2",
    "streamlit>=1.40.2",
]

[project.scripts]
vidmarconcorrencia = "vidmarconcorrencia.main:run"
run_crew = "vidmarconcorrencia.main:run"
train = "vidmarconcorrencia.main:train"
replay = "vidmarconcorrencia.main:replay"
test = "vidmarconcorrencia.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
